# phpack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  pack.cpp  pack.h  test.cpp
.github/workflows/: ccpp.yml
include/: pack.cpp  pack.h  pack_impl.h
src/: pack.cpp  pack.h
tests/: test.cpp
